api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app:  kyc-api-gateway
spec: 
  replicas: 2
  selector:
    matchLabels:
      app:  kyc-api-gateway
  template:
    metadata:
      labels:
        app:  kyc-api-gateway
    spec:
      containers:
        - name: backend
          image: cecillwala/kyc-api-gateway
          port:
            - containerPort: 8080
