backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app:  k8s-backend
spec: 
  replicas: 2
  selector:
    matchLabels:
      app:  k8s-backend
  template:
    metadata:
      labels:
        app:  k8s-backend
    spec:
      containers:
        - name: backend
          image: cecillwala/k8s-backend
