frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app:  k8s-frontend
spec: 
  replicas: 2
  selector:
    matchLabels:
      app:  k8s-frontend
  template:
    metadata:
      labels:
        app:  k8s-frontend
    spec:
      containers:
        - name: frontend
          image: cecillwala/k8s-frontend
