kyc-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyc-service
  labels:
    app:  kyc-backend
spec: 
  replicas: 2
  selector:
    matchLabels:
      app:  kyc-backend
  template:
    metadata:
      labels:
        app:  kyc-backend
    spec:
      containers:
        - name: kyc-service
          image: cecillwala/kyc-kyc-service
          ports:
            - containerPort: 8081
