api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: kyc-eureka-server
  ports:
  - protocol: TCP
    port: 8080
