api-gateway-yaml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app:  kyc-api-gateway
spec: 
  replicas: 2
  selector:
    matchLabels:
      app:  kyc-api-gateway
  template:
    metadata:
      labels:
        app:  kyc-api-gateway
    spec:
      containers:
        - name: api-gateway
          image: cecillwala/kyc-api-gateway
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: kyc-api-gateway
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8080
