backend-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: backend-service
spec:
  selector:
    app: k8s-backend
  ports:
    # - protocol: TCP
    - port: 8080
  type: NodePort
