eureka-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-server-communication
spec:
  selector:
    app: kyc-eureka-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9099
