eureka-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
spec:
  type: ClusterIP
  selector:
    app: kyc-eureka-server
  ports:
  - protocol: TCP
    port: 9099
    targetPort: 9099
