eureka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
spec:
  type: NodePort
  selector:
    app: kyc-eureka-server
  ports:
    - port: 80
      targetPort: 9099
