frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: k8s-frontend
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
