kyc-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kyc-service
spec:
  type: ClusterIP
  selector:
    app: kyc-service
  ports:
    port: 8081
    targetPort: 8081
