report-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: report-frontend
spec:
  type: NodePort
  selector:
    app: kyc-report-frontend
  ports:
  - protocol: TCP
    port: 80
