report-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyc-service
  labels:
    app:  kyc-backend
spec: 
  replicas: 2
  selector:
    matchLabels:
      app:  kyc-backend
  template:
    metadata:
      labels:
        app:  kyc-backend
    spec:
      containers:
        - name: kyc-service
          image: cecillwala/kyc-report-service
          ports:
            - containerPort: 8083

---
            
apiVersion: v1
kind: Service
metadata:
  name: kyc-service
spec:
  type: ClusterIP
  selector:
    app: kyc-service
  ports:
    - port: 8083
      targetPort: 8083
