backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization, X-Requested-With"
spec:
  ingressClassName: nginx
  rules:
    - host: giktekkyc.org
      http:
        paths:
          - path: /backend/kyc
            pathType: Prefix
            backend:
              service:
                name: kyc-service
                port:
                  number: 8081
