frontend-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: frontend
  rules:
  - http:
      paths:
      - path: /guess
        pathType: Prefix
        frontend:
          service:
            name: frontend-service
            port:
              number: 4200
