report-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: report-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: giktekkyc.org
    http:
      paths:
      - path: /report
        pathType: Prefix
        backend:
          service:
            name: report-frontend
            port: 
              number: 80
